<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_closet"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/nav_closet" />

    <item
        android:id="@+id/nav_tryon"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/nav_tryon" />

    <item
        android:id="@+id/nav_inspiration"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/nav_inspiration" />

    <item
        android:id="@+id/nav_community"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_community" />
</menu>
